--- a/exps/01_train_MST/train.ipynb
+++ b/exps/01_train_MST/train.ipynb
@@ -112,12 +112,10 @@
     "for id in val_files:\n",
     "    labels[id] = os.path.join(label_folder, 'validate',os.path.basename(id).replace('.wav','.txt'))\n",
     "\n",
-    "params['train'] = True\n",
     "# Generators\n",
     "print('Making training generator')\n",
     "training_generator = DataGenerator(train_files, labels, **params)\n",
     "\n",
-    "params['train'] = False\n",
     "params['sequence_hop_time'] = sequence_time # To calculate F1_1s\n",
     "\n",
     "print('Making validation generator')\n",
@@ -295,13 +293,7 @@
       "60000/60000 [==============================] - 12s 194us/step - loss: 0.0027 - val_loss: 0.0027\n",
       "Epoch 59/101\n",
       "60000/60000 [==============================] - 12s 194us/step - loss: 0.0028 - val_loss: 0.0028\n",
-      "Epoch 60/101\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 60/101\n",
       "60000/60000 [==============================] - 12s 194us/step - loss: 0.0028 - val_loss: 0.0026\n",
       "Epoch 61/101\n",
       "60000/60000 [==============================] - 12s 194us/step - loss: 0.0029 - val_loss: 0.0029\n",
